<resources>
    <string name="um_id">60af823e6c421a3d97cf8531</string>
    <string name="save_share">分享到</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="latest_use">最近使用</string>
    <string name="recent_pic">最近图片</string>
    <string name="prefer_pic">常用图片</string>
    <string name="choose_pic_from_system">从系统相册选图</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="app_necessary_permission_notice">点击允许所有权限，APP才能正常使用哦</string>
    <string name="app_option_permission_notice">缺乏必要权限会影响我们提供给您的服务，您可以选择打开</string>
    <string name="go_to_permit">去允许</string>
    <string name="permission">权限</string>
    <string name="privacy_tips_title">温馨提示</string>
    <string name="privacy_tips_content">如您不同意我们的用户协议和隐私政策，您将无法使用我们的APP</string>
    <string name="setting_permission_guide">\n请在 设置-应用管理-权限 中，允许权限</string>
    <string name="permission_use_statement">"·关于定位权限：我们只会基于定位推荐您感兴趣的内容，不会用作其它用途并严格保护您的隐私！\n\n"
                "·关于通话权限：我们需要根据电话状态码区分您和其他用户，不会使用电话短信相关功能，请您放心！\n"</string>
    <string name="app_name">艺术美图</string>
    <string name="version_name">v%1$s</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">艺术美图</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="pen">钢笔</string>
    <string name="shape">形状</string>
    <string name="swear">涂抹</string>
    <string name="rubber">橡皮</string>
    <string name="cut_scale">比例</string>
    <string name="cut_rotate">旋转</string>
    <string name="cut_flip">翻转</string>
    <string name="title_choose_local">本机</string>
    <string name="all">全部</string>
    <string name="title_choose_tietu">贴图</string>
    <string name="title_choose_template">模板</string>
    <string name="save_size">图片大小(省流发送)</string>
    <string name="save_set_dialog_name">保存和分享</string>
    <string name="save_finish">保存完成!</string>
    <string name="share_finish">分享完成!</string>
    <string name="save_and_share">已保存</string>
    <string name="return_choose">回首页</string>
    <string name="continue_ptu">继续P图</string>
    <string name="please_wait">请稍后</string>
    <string name="latest_pic">最新图片</string>
    <string name="make_expression">制作表情</string>
    <string name="draw">绘图</string>
    <string name="edit">编辑</string>
    <string name="text">文字</string>
    <string name="tietu">贴图</string>
    <string name="mat">抠图</string>
    <string name="dig_face">抠脸</string>
    <string name="the_return">返回</string>
    <string name="save_add">保存 +</string>
    <string name="setting">设置</string>
    <string name="fuse">融合</string>
    <string name="apply_success">申请成功</string>
    <string name="generating">正在生成中...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clean_cache">清除缓存</string>
    <string name="settings_about">关于艺术美图</string>
    <string name="settings_check_update">检查更新</string>
    <string name="app_guide">P图引导页</string>
    <string name="settings_other">其它</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_star">给个好评吧</string>
    <string name="settings_quick_tools">快捷工具</string>
    <string name="settings_comment">评价</string>
    <string name="settings_share">分享时不带应用标签</string>
    <string name="settings_notify">退出后显示通知</string>
    <string name="settings_notify_quick">高清模式</string>
    <string name="about_des">本软件基于个人业余爱好开发，希望分享一些有趣的功能给大家。</string>
    <string name="about_title">关于</string>
    <string name="settings_user">用户</string>
    <string name="user_login">登录</string>
    <string name="open_vip">开通会员</string>
    <string name="exempt_ad">无广告</string>
    <string name="no_ad_detail">告别广告打扰</string>
    <string name="use_all_functions">解锁所有模板</string>
    <string name="vip_privileges">会员特权</string>
    <string name="min_vip_price">会员免广告，仅需2元！</string>
    <string name="set_meal_half_month">半个月</string>
    <string name="set_meal_one_month">一个月</string>
    <string name="set_meal_three_moths">三个月</string>
    <string name="feedback_method">联系方式:</string>
    <string name="feedback_contact">选填(QQ、微信、手机号码、邮箱)，便于我们联系您解决，我们将会抽取部分用户进行有奖调查</string>
    <string name="feedback_comment">有什么不爽或建议尽管吐槽吧，我们会努力改进的。</string>
    <string name="feedback_commit">提交反馈</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_des">问题描述:</string>
    <string name="feedback_has_commit">反馈已提交</string>
    <string name="commit_success_thanks">提交成功，感谢您的反馈!</string>
    <string name="record_success_thanks">记录成功，感谢您的反馈!</string>
    <string name="network_error_try_latter">网络或服务器出错，请稍后再试！</string>
    <string name="load_tietu_failed">加载贴图失败</string>
    <string name="load_style_pic_failed">加载贴图失败</string>
    <string name="load_pic_failed">加载图片失败</string>
    <string name="rend_pic">撕图</string>
    <string name="finish">完成</string>
    <string name="split">分开</string>
    <string name="preview">预览</string>
    <string name="reset">重置</string>
    <string name="choose_base_pic">选背景</string>
    <string name="scale">缩放</string>
    <string name="add_text">加文字</string>
    <string name="go_edit">去裁剪</string>
    <string name="rend_again">再撕一次</string>
    <string name="go_choose_base_pic">选背景 >></string>
    <string name="load_pic_failed_not_exit_or_format_error">图片加载失败，图片不存在，或格式出错</string>
    <string name="get_pic_failed">获取图片失败</string>
    <string name="cut_out">抠图</string>
    <string name="blur_radius_name">模糊半径</string>
    <string name="blur_radius_value">%1$d</string>
    <string name="paint_size">画笔大小 %1$s</string>
    <string name="cutout_processing">正在抠图中...</string>
    <string name="fail_to_cacu_crack_notice">计算裂痕失败！请让图片至于两指中心。</string>
    <string name="first_download_pic_resource_notice">首次进入需要下载表情,可能需要较多时间,请您稍后！</string>
    <string name="download_pic_resources_note">正在加载表情… 请稍后</string>
    <string name="size">尺寸</string>
    <string name="loading">正在加载中...</string>
    <string name="ad_pause_to_see">暂停观看</string>
    <string name="enter_app">进入应用</string>
    <string name="no_momery_notice">很抱歉，应用内存不足！请保存图片，重新进入应用再编辑</string>
    <string name="please_cutout_first">请先圈出抠图区域！</string>
    <string name="cut_out_review">预览</string>
    <string name="crop">裁剪</string>
    <string name="leave_from_much_edit">当前编辑较多，再点即可离开</string>
    <string name="my_tietu">我的</string>
    <string name="my_tietu_guide">图片选择页长按图片即可收藏我的贴图哦</string>
    <string name="delete_finish">已删除</string>
    <string name="prop">道具</string>
    <string name="expression">表情</string>
    <string name="paint_color">颜色</string>
    <string name="paint_eraser">橡皮檫</string>
    <string name="paint">画笔</string>
    <string name="paint_style">样式</string>
    <string name="no_template_resource">暂时无法下载模板，网络或者服务器出错</string>
    <string name="no_my_tietu_notice">您还没有添加贴图，首页长按图片即可添加哦</string>
    <string name="pic_download_failed_info">下载图片失败，网络或者服务器出错!</string>
    <string name="no_network_tietu_notice">暂时无法下载贴图，网络或者服务器出错!</string>
    <string name="gif_guide">下方是帧列表，长按可选择多帧，效果只添加到选中帧上面哟，双击可取消</string>
    <string name="gif_ptu_preview_guide">点击此处可以预览P图效果哟</string>
    <string name="composing_gif">合成GIF中...</string>
    <string name="adding">添加中...</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="gif_save_guide">只会保存选中的帧哦，全选全部请全选</string>
    <string name="saving">保存中...</string>
    <string name="delete">删除</string>
    <string name="ad_state">本应用为免费应用，广告有助于支持我们更好的开发应用，感谢！</string>
    <string name="about_ad">关于广告</string>
    <string name="ad">广告</string>
    <string name="failed_to_get_data_from_local_db">从本地数据库获取数据失败！</string>
    <string name="make">制作</string>
    <string name="property">道具</string>
    <string name="more">更多</string>
    <string name="tiao_se">调色</string>
    <string name="dig_save_guide">抠图已保存，点击我的贴图可看到</string>
    <string name="blur_radius_guide">调节模糊半径，可使抠图后贴图效果更逼真哦</string>
    <string name="register_success">登录成功!</string>
    <string name="login_has_canceled">已取消登录</string>
    <string name="login_out">退出</string>
    <string name="login_failed_by_server">服务器创建用户失败！</string>
    <string name="faile_to_get_login_info">获取登录信息出错!</string>
    <string name="please_relogin">请重新登陆</string>
    <string name="login_failed_by_other_error">登录失败，服务器或者网络出错</string>
    <string name="server_create_user_failed_by_other_error">创建用户失败，服务器或者网络出错</string>
    <string name="get_user_info_failed_by_other_error">获取用户信息失败，网络或服务器出错！</string>
    <string name="failed_to_access_server">访问服务器失败</string>
    <string name="login_success">登录成功</string>
    <string name="msg_got_is_null">获取到的信息为空</string>
    <string name="quickly_ptu_notice_chanel_name">快速P图</string>
    <string name="quickly_ptu_notice_chanel_description">快速打开应用进行P图</string>
    <string name="cancel_multi_choose_confirm">当前已选择多张图片，确定取消吗</string>
    <string name="fail_to_download_font">解析字体失败,试试在设置中删除再重新下载</string>
    <string name="text_transparency">透明度</string>
    <string name="text_style">风格</string>
    <string name="text_color">颜色</string>
    <string name="text_font">字体</string>
    <string name="make_gif">制作GIF</string>
    <string name="make_gif_notice">双击或长按</string>
    <string name="too_many_pic_to_mack_gif">当前选择图片过多</string>
    <string name="contain_video_cannot_mack_gif">所选图片中已经包含短视频，无法制作</string>
    <string name="pay_immediately">立即支付</string>
    <string name="price_format">%1$.2f元</string>
    <string name="part_pic_cannot_be_load">部分图片无法加载</string>
    <string name="unkown_error">操作遇到未知错误</string>
    <string name="not_yet_support_video_make">暂不支持视频制作</string>
    <string name="path_is">路径: %1$s</string>
    <string name="on_loading_info">正在加载资料</string>
    <string name="on_logging_server">正在登陆服务器</string>
    <string name="paint_opacity">不透明度</string>
    <string name="no_net_to_download_typeface">没有网络暂时无法下载字体哟！</string>
    <string name="unlock_title">此功能需要解锁哟</string>
    <string name="unlock_title_resource">此资源需要解锁哟</string>
    <string name="please_wait_for_load_video">加载视频中，请稍后</string>
    <string name="locked_after_video">看完视频解锁</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policies">隐私政策</string>
    <string name="long_time_parse_video_so_ad">视频解析时间较长，先看个视频吧</string>
    <string name="support_by_video_ad">支持我们，看个视频吧</string>
    <string name="have_a_look">看一看(%1$d)</string>
    <string name="drop_it">算了</string>
    <string name="tietu_gif_secondary_sure_guide">您可以点击下面一个确定按钮√，快速添加贴图哟</string>
    <string name="draw_gif_secondary_sure_guide">您可以点击下面一个确定按钮√，绘制到当前选中的GIF</string>
    <string name="share_methods_tips">分享方式</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="confirm">确定</string>
    <string name="error_missing_appid_rsa_private">私有密钥错误</string>
    <string name="pay_success">付款成功</string>
    <string name="pay_result">付款结果</string>
    <string name="pay_failed">付款失败</string>
    <string name="logout">退出登录</string>
    <string name="upload_works_for_other_to_use">将您的作品上传到服务器，分享给其他用户使用</string>
    <string name="ok">好的</string>
    <string name="upload">上传</string>
    <string name="delete_result_or_re_save">删除图片，删除后您可以返回上页重新保存</string>
    <string name="congratulations_on_successful_membership">恭喜您开通会员成功！</string>
    <string name="regrit_failed_to_open_vip">很遗憾开通会员失败</string>
    <string name="has_opened_vip">您已经是VIP，不用再开通</string>
    <string name="vip_free_ad_floor_price">VIP免广告，仅需%1$s元！</string>
    <string name="vip_resources_floor_price">VIP解锁所有图片，仅需%1$s元！</string>
    <string name="go_open">去开通</string>
    <string name="vip_set_meal">VIP套餐</string>
    <string name="title_help">教程</string>
    <string name="sort_by_hot_desc">最热图片</string>
    <string name="sort_by_time_asc">最新图片</string>
    <string name="sort_by_group">分组排列</string>
    <string name="guide">教程</string>
</resources>