<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:acContext="FeedBackActivity">

    <include layout="@layout/include_toolbar" />

    <TextView
        style="@style/setting_item_text"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/feedback_des" />

    <EditText
        android:id="@+id/feedback_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="start|top"
        android:hint="@string/feedback_comment"
        android:minLines="6"
        android:padding="@dimen/dp_8" />

    <TextView
        style="@style/setting_item_text"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/feedback_method"
        android:textColor="@color/text_deep_black" />

    <EditText
        android:id="@+id/feedback_contact_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="start|top"
        android:hint="@string/feedback_contact"
        android:minLines="4"
        android:padding="@dimen/dp_8"
        android:textColor="@color/text_deep_black" />

    <Button
        android:id="@+id/feedback_btn_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/deepOrange"
        android:text="@string/feedback_commit"
        android:textColor="@color/white" />

</LinearLayout>
