<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:acContext="com.example.baozouptu.MainActivity">
<!--    <item
        android:enabled="false"
        android:icon="@drawable/ic_sort_list"
        android:iconTint="@color/deepOrange"
        android:title="列表排序" />-->
    <item
        android:id="@+id/action_sort_by_hot_desc"
        android:icon="@drawable/round_arrow_downward"
        android:title="@string/sort_by_hot_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_time_asc"
        android:icon="@drawable/round_arrow_downward"
        android:title="@string/sort_by_time_asc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_group"
        android:title="@string/sort_by_group"
        app:showAsAction="never" />
</menu>
