<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/draw_function_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.mandi.intelimeditor.home.view.BottomFunctionView
            android:id="@+id/draw_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bfv_icon="@mipmap/draw"
            app:bfv_icon_bg="@drawable/function_background_draw_pink"
            app:bfv_title="@string/paint" />

        <com.mandi.intelimeditor.home.view.BottomFunctionView
            android:id="@+id/draw_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bfv_icon="@drawable/color"
            app:bfv_title="@string/paint_color" />

        <com.mandi.intelimeditor.home.view.BottomFunctionView
            android:id="@+id/draw_eraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bfv_icon="@mipmap/eraser"
            app:bfv_title="@string/paint_eraser" />

    </LinearLayout>

    <include
        layout="@layout/layout_tietu_eraser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</FrameLayout>